# uprocket

./: Cargo.toml  Rocket.toml
src/: main.rs
static/: 404.html  413.html  script.js  style.css
templates/: index.html.tera  upload.html.tera
