[package]
name = "uprocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
regex = "1.6.0"
tera = "1.17.1"
rocket_seek_stream = {git="https://github.com/rydz/rocket_seek_stream"}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]